--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ select, input {
             var volume = document.getElementById("volume-ventilation").value;
             var fanCapacity = document.getElementById("fan-capacity").value;
            // var timerDuration = document.getElementById("timer-duration").value;
-            var ventilation = (volume / 8/fanCapacity) ;
+            var ventilation = Math.floor(volume / 8/fanCapacity) ;
             document.getElementById("ventilation-change-result").innerText = ventilation;
             document.getElementById("result-ventilation-change").style.display = "block";
         }
